--- a/Macro_Prediction_Models/Prediction_Script_Diesel.ipynb
+++ b/Macro_Prediction_Models/Prediction_Script_Diesel.ipynb
@@ -52,11 +52,7 @@
       "metadata": {
         "id": "KwyJbtuvIJgW",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "6638b5fa-879e-47d8-c617-0e5257c7ecf2"
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -78,25 +74,10 @@
         "from keras.layers import Dense, Dropout, LSTM\n",
         "from keras.callbacks import ModelCheckpoint\n",
         "\n",
-        "!git clone https://github.com/hdemma/hdemma.github.io.git"
+        "#!git clone https://github.com/hdemma/hdemma.github.io.git"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "fatal: destination path 'hdemma.github.io' already exists and is not an empty directory.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -135,26 +116,22 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 34
         },
-        "outputId": "c19adc1a-3f53-4cc0-d3f4-2cecb3846498"
+        "outputId": "57343836-42dc-4ec5-c6d1-f3d8b0eaa3c1"
       },
       "source": [
         "Vehicle_Type = 'Diesel_Vehicles'\n",
-        "%cd hdemma.github.io\n",
         "\n",
         "url = 'https://raw.githubusercontent.com/hdemma/hdemma.github.io/develop/Dataset/Diesel_Vehicles/Diesel_Vehicles_Final_Training_Samples.csv'\n",
         "df = pd.read_csv(url)\n",
         "print(len(df))"
       ],
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/hdemma.github.io\n",
-            "/content/hdemma.github.io\n",
-            "_config.yml  Dataset  Macro_Prediction_Models  README.md\n",
             "54741\n"
           ],
           "name": "stdout"
@@ -180,7 +157,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "ee33c497-6762-4013-a094-c37135f5c7a7"
+        "outputId": "de852c82-1cdd-4dcf-8173-1a62346b85d7"
       },
       "source": [
         "df = df.values.tolist()\n",
@@ -215,7 +192,7 @@
         "\n",
         "print('*******************************')"
       ],
-      "execution_count": 4,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,7 +227,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "e6401d4c-8493-431c-b8f4-e4720127f714"
+        "outputId": "a3635651-ce84-45af-eb0a-dbf97f8ddab5"
       },
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
@@ -261,7 +238,7 @@
         "print(f'Testing_inputs = {np.shape(X_test)}')\n",
         "print(f'Testing_Labels = {np.shape(y_test)}')"
       ],
-      "execution_count": 5,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +271,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "ee83af8f-d161-441a-8bda-6a6ab9012473"
+        "outputId": "b29faf2c-08b4-4fef-8ab4-7f03a4c222a6"
       },
       "source": [
         "# Saving Time Needed for predicting for samples with longer intervals\n",
@@ -319,7 +296,7 @@
         "\n",
         "Length_of_TestData = T[0]"
       ],
-      "execution_count": 6,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -353,7 +330,7 @@
       "source": [
         "def SimpleFeedForward_Model():\n",
         "\n",
-        "  %cd Dataset/PredictionModels/Diesel/\n",
+        "  %cd /content/hdemma.github.io/Dataset/PredictionModels/Diesel/\n",
         "\n",
         "  if Train:\n",
         "\n",
@@ -459,7 +436,7 @@
       "source": [
         "def DecisionTree_Model():\n",
         "  \n",
-        "  %cd Dataset/PredictionModels/Diesel/\n",
+        "  %cd /content/hdemma.github.io/Dataset/PredictionModels/Diesel/\n",
         "  filename = 'finalized_DT_model.sav'\n",
         "  if Train:\n",
         "    DT_regressor = DecisionTreeRegressor(max_depth=Number_of_Features,\n",
@@ -497,14 +474,6 @@
         "\n",
         "  else:\n",
         "\n",
-        "    ###load the model from disk\n",
-        "    # url='https://github.com/hdemma/hdemma.github.io/blob/develop/Dataset/PredictionModels/Diesel/finalized_DT_model.sav'\n",
-        "    # print('\\nError')\n",
-        "    # model = !wget url\n",
-        "    # print(model)\n",
-        "\n",
-        "    # loaded_model = drive.CreateFile({'id': '1CvoiMkyCEALRhZFBbyevGsezFEx77g2S'}) \n",
-        "    # loaded_model.GetContentFile('finalized_DT_model.sav')\n",
         "    loaded_model = pickle.load(open(filename, 'rb'))\n",
         "    y_pred = loaded_model.predict(X_test)\n",
         "    score = loaded_model.score(X_test,y_test)\n",
@@ -535,7 +504,7 @@
       "source": [
         "def LinearRegression_Model():\n",
         "\n",
-        "  %cd Dataset/PredictionModels/Diesel/\n",
+        "  %cd /content/hdemma.github.io/Dataset/PredictionModels/Diesel/\n",
         "\n",
         "  filename = f'finalized_LR_model.sav'\n",
         "\n",
@@ -660,7 +629,7 @@
       "source": [
         "def Save_Results_to_Files(Model_Name,Actual_Values,PredictedValues,Time_needed):\n",
         "\n",
-        "    %cd Dataset/Results/Diesel/\n",
+        "    %cd /content/hdemma.github.io/Dataset/Results/Diesel/\n",
         "\n",
         "    Abs_Loss = []\n",
         "    for i in range(0,len(Actual_Values)):\n",
@@ -704,7 +673,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "4a737dc6-7711-4662-e739-4728b6268479"
+        "outputId": "5a2b2881-9b87-4683-efd8-284dc025592e"
       },
       "source": [
         "Models = ['DecisionTree','SimpleFeedForward','LinearRegression']\n",
@@ -745,12 +714,12 @@
         "\n",
         "    Save_Results_to_Files(Model_Name,Actual_Values,PredictedValues,Time_needed)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/hdemma.github.io\n",
+            "/content/hdemma.github.io/Dataset/PredictionModels/Diesel\n",
             "\n",
             "\n",
             "\n",
@@ -799,8 +768,7 @@
         {
           "output_type": "stream",
           "text": [
-            "[Errno 2] No such file or directory: 'Dataset/Results/Diesel/'\n",
-            "/content/hdemma.github.io/Dataset/PredictionModels/Diesel\n",
+            "/content/hdemma.github.io/Dataset/Results/Diesel\n",
             "\n",
             "\n",
             "***********CSV Saved************\n",
@@ -811,7 +779,6 @@
             "*************Executing FF*************\n",
             "\n",
             "\n",
-            "[Errno 2] No such file or directory: 'Dataset/PredictionModels/Diesel/'\n",
             "/content/hdemma.github.io/Dataset/PredictionModels/Diesel\n",
             "MSE\t\tMAE\n",
             "Tarining Set Loss: [0.0006285004468564459, 0.012198099866509438]\n",
@@ -849,8 +816,7 @@
         {
           "output_type": "stream",
           "text": [
-            "[Errno 2] No such file or directory: 'Dataset/Results/Diesel/'\n",
-            "/content/hdemma.github.io/Dataset/PredictionModels/Diesel\n",
+            "/content/hdemma.github.io/Dataset/Results/Diesel\n",
             "\n",
             "\n",
             "***********CSV Saved************\n",
@@ -861,7 +827,6 @@
             "*************Executing LR*************\n",
             "\n",
             "\n",
-            "[Errno 2] No such file or directory: 'Dataset/PredictionModels/Diesel/'\n",
             "/content/hdemma.github.io/Dataset/PredictionModels/Diesel\n",
             "R^2 Score = 0.6569242311919887\n"
           ],
@@ -904,8 +869,7 @@
         {
           "output_type": "stream",
           "text": [
-            "[Errno 2] No such file or directory: 'Dataset/Results/Diesel/'\n",
-            "/content/hdemma.github.io/Dataset/PredictionModels/Diesel\n",
+            "/content/hdemma.github.io/Dataset/Results/Diesel\n",
             "\n",
             "\n",
             "***********CSV Saved************\n",
@@ -934,7 +898,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 587
         },
-        "outputId": "b50d36fe-c663-4f14-a1ca-06ef9537972c"
+        "outputId": "8cdfd6c0-d7a1-41ed-d998-89fb9fd57ace"
       },
       "source": [
         "Vehicle_Type = 'Diesel_Vehicles'\n",
@@ -954,25 +918,12 @@
         "    \n",
         "\n",
         "    MSE = mean_squared_error(Actual_Values, Predicted_Values)\n",
-        "    # print(f'MSE = {MSE}')\n",
         "    MSE_Loss.append(MSE)\n",
-        "    # print(f\"Average MAE Loss from {Model_Name} = {Avg_Loss_df.mean()}\")\n",
-        "    # print(f\"Average Actual value {Model_Name} = {Actual_Values.mean()}\")\n",
         "    LOSS.append(Avg_Loss_df.mean())\n",
         "    Error_in_Percentage.append(Avg_Loss_df.mean()/Actual_Values.mean()*100)\n",
-        "    # print(f\"Error_in_Percentage from {Model_Name} = {round(Avg_Loss_df.mean()/Actual_Values.mean()*100,2)}%\\n\\n\")\n",
+        "    \n",
         "\n",
         "\n",
-        "# print(Model_Names)\n",
-        "# print(MSE_Loss)\n",
-        "# print(LOSS)\n",
-        "\n",
-        "# Model_Names = ['ANN','DT','LR']\n",
-        "# df = pd.DataFrame({\"Models\":Model_Names,\n",
-        "#                   \"MSE\":MSE_Loss,\n",
-        "#                    \"MAE\":LOSS})\n",
-        "\n",
-        "# df.to_csv(f'../DataSet/{Vehicle_Type}/PredictedVALUES/{Vehicle_Type}_Shorter_Interval_Loss.csv')\n",
         "\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
@@ -995,7 +946,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
