--- a/Macro_Prediction_Models/Prediction_Script_Electric.ipynb
+++ b/Macro_Prediction_Models/Prediction_Script_Electric.ipynb
@@ -80,7 +80,7 @@
         "from keras.layers import Dense, Dropout, LSTM\n",
         "from keras.callbacks import ModelCheckpoint\n",
         "\n",
-        "#!git clone https://github.com/hdemma/hdemma.github.io.git"
+        "!git clone https://github.com/hdemma/hdemma.github.io.git"
       ],
       "execution_count": 1,
       "outputs": [
