--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -11,7 +11,31 @@
   keywords     = {transit, middleware},
 }
 
- 
+ @inproceedings{wilbur2020decentralized,
+  title={Time-dependent Decentralized Routing using Federated Learning},
+  author={Wilbur, Michael and Samal, Chinmaya and Talusan, Jose Paolo and Yasumoto, Keiichi and Dubey, Abhishek},
+  booktitle={2020 IEEE 23nd International Symposium on Real-Time Distributed Computing (ISORC)},
+  year={2020},
+    abstract={Recent advancements in cloud computing have
+driven rapid development in data-intensive smart city applications
+by providing near real time processing and storage
+scalability. This has resulted in efficient centralized route planning
+services such as Google Maps, upon which millions of
+users rely. Route planning algorithms have progressed in line
+with the cloud environments in which they run. Current state
+of the art solutions assume a shared memory model, hence
+deployment is limited to multiprocessing environments in data
+centers. By centralizing these services, latency has become the
+limiting parameter in the technologies of the future, such as
+autonomous cars. Additionally, these services require access
+to outside networks, raising availability concerns in disaster
+scenarios. Therefore, this paper provides a decentralized route
+planning approach for private fog networks. We leverage recent
+advances in federated learning to collaboratively learn shared
+prediction models online and investigate our approach with a
+simulated case study from a mid-size U.S. city.},
+  organization={IEEE}
+}
 @Article{Sun2019,
   author    = {Fangzhou Sun and Abhishek Dubey and Jules White and Aniruddha Gokhale},
   title     = {Transit-hub: a smart public transportation decision support system with multi-timescale analytical services},
@@ -30,6 +54,46 @@
   project   = {smart-cities,smart-transit},
   timestamp = {Wed, 21 Aug 2019 01:00:00 +0200},
   url       = {https://doi.org/10.1007/s10586-018-1708-z},
+}
+@InProceedings{sivagnanam2020minimizing,
+  author        = {Amutheezan Sivagnanam and Afiya Ayman and Michael Wilbur and Philip Pugliese and Abhishek Dubey and Aron Laszka},
+  title         = {Minimizing Energy Use of Mixed-Fleet Public Transit for Fixed-Route Service},
+  booktitle     = {Preprint at Arxiv},
+  year          = {2020},
+  abstract      = {Public transit can have significantly lower environmental impact than personal vehicles; however, it still uses a substantial amount of energy, causing air pollution and greenhouse gas emission. While electric vehicles (EVs) can reduce energy use, most public transit agencies have to employ them in combination with conventional, internal-combustion engine vehicles due to the high upfront costs of EVs. To make the best use of such a mixed fleet of vehicles, transit agencies need to optimize route assignments and charging schedules, which presents a challenging problem for large public transit networks. We introduce a novel problem formulation to minimize fuel and electricity use by assigning vehicles to transit trips and scheduling them for charging while serving an existing fixed-route transit schedule. We present an integer program for optimal discrete-time scheduling, and we propose polynomial-time heuristic algorithms and a genetic algorithm for finding solutions for larger networks. We evaluate our algorithms on the transit service of a mid-size U.S. city using operational data collected from public transit vehicles. Our results show that the proposed algorithms are scalable and achieve near-minimum energy use.},
+  archiveprefix = {arXiv},
+  eprint        = {2004.05146},
+  preprint      = {https://arxiv.org/abs/2004.05146},
+  primaryclass  = {cs.AI},
+}
+
+@InProceedings{chen2020review,
+  author        = {Yuche Chen and Guoyuan Wu and Ruixiao Sun and Abhishek Dubey and Aron Laszka and Philip Pugliese},
+  title         = {A Review and Outlook of Energy Consumption Estimation Models for Electric Vehicles},
+  booktitle     = {Preprint at Arxiv},
+  year          = {2020},
+  abstract      = {Electric vehicles (EVs) are critical to the transition to a low-carbon transportation system. The successful adoption of EVs heavily depends on energy consumption models that can accurately and reliably estimate electricity consumption. This paper reviews the state-of-the-art of EV energy consumption models, aiming to provide guidance for future development of EV applications. We summarize influential variables of EV energy consumption into four categories: vehicle component, vehicle dynamics, traffic and environment related factors. We classify and discuss EV energy consumption models in terms of modeling scale (microscopic vs. macroscopic) and methodology (data-driven vs. rule-based). Our review shows trends of increasing macroscopic models that can be used to estimate trip-level EV energy consumption and increasing data-driven models that utilized machine learning technologies to estimate EV energy consumption based on large volume real-world data. We identify research gaps for EV energy consumption models, including the development of energy estimation models for modes other than personal vehicles (e.g., electric buses, electric trucks, and electric non-road vehicles); the development of energy estimation models that are suitable for applications related to vehicle-to-grid integration; and the development of multi-scale energy estimation models as a holistic modeling approach.},
+  archiveprefix = {arXiv},
+  eprint        = {2003.12873},
+  preprint      = {https://arxiv.org/abs/2003.12873},
+  primaryclass  = {eess.SY},
+}
+@InProceedings{Basak2019,
+  author    = {Sanchita Basak and Fangzhou Sun and Saptarshi Sengupta and Abhishek Dubey},
+  title     = {Data-Driven Optimization of Public Transit Schedule},
+  booktitle = {Big Data Analytics - 7th International Conference, {BDA} 2019, Ahmedabad, India},
+  year      = {2019},
+  pages     = {265--284},
+  abstract  = {Bus transit systems are the backbone of public transportation in the United States. An important indicator of the quality of service in such infrastructures is on-time performance at stops, with published transit schedules playing an integral role governing the level of success of the service. However there are relatively few optimization architectures leveraging stochastic search that focus on optimizing bus timetables with the objective of maximizing probability of bus arrivals at timepoints with delays within desired on-time ranges. In addition to this, there is a lack of substantial research considering monthly and seasonal variations of delay patterns integrated with such optimization strategies. To address these, this paper makes the following contributions to the corpus of studies on transit on-time performance optimization: (a) an unsupervised clustering mechanism is presented which groups months with similar seasonal delay patterns, (b) the problem is formulated as a single-objective optimization task and a greedy algorithm, a genetic algorithm (GA) as well as a particle swarm optimization (PSO) algorithm are employed to solve it, (c) a detailed discussion on empirical results comparing the algorithms are provided and sensitivity analysis on hyper-parameters of the heuristics are presented along with execution times, which will help practitioners looking at similar problems. The analyses conducted are insightful in the local context of improving public transit scheduling in the Nashville metro region as well as informative from a global perspective as an elaborate case study which builds upon the growing corpus of empirical studies using nature-inspired approaches to transit schedule optimization.},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/bib/conf/bigda/BasakSSD19},
+  category  = {selectiveconference},
+  doi       = {10.1007/978-3-030-37188-3\_16},
+  file      = {:Basak2019-Data_Driven_Optimization_of_Public_Transit_Schedule.pdf:PDF},
+  keywords  = {transit},
+  project   = {smart-cities,smart-transit},
+  timestamp = {Fri, 13 Dec 2019 12:44:00 +0100},
+  url       = {https://doi.org/10.1007/978-3-030-37188-3\_16},
 }
 
 
@@ -94,4 +158,15 @@ including deep neural networks, decision trees, and linear regression, on
 our integrated dataset. Our results show that neural networks provide
 accurate estimates, while other models can help us discover relations
 between energy use and factors such as road and weather conditions."
+}
+
+@InProceedings{basak2019bigdata,
+  author    = {Sanchita Basak and Abhishek Dubey and Bruno P. Leao},
+  title     = {Analyzing the Cascading Effect of Traffic Congestion Using LSTM Networks},
+  booktitle = {IEEE Big Data},
+  year      = {2019},
+  address   = {Los Angeles, Ca},
+  abstract  = {This paper presents a data-driven approach for predicting the propagation of traffic congestion at road seg-ments as a function of the congestion in their neighboring segments. In the past, this problem has mostly been addressed by modelling the traffic congestion over some standard physical phenomenon through which it is difficult to capture all the modalities of such a dynamic and complex system. While other recent works have focused on applying a generalized data-driven technique on the whole network at once, they often ignore intersection characteristics. On the contrary, we propose a city-wide ensemble of intersection level connected LSTM models and propose mechanisms for identifying congestion events using the predictions from the networks. To reduce the search space of likely congestion sinks we use the likelihood of congestion propagation in neighboring road segments of a congestion source that we learn from the past historical data. We validated our congestion forecasting framework on the real world traffic data of Nashville, USA and identified the onset of congestion in each of the neighboring segments of any congestion source with an average precision of 0.9269 and an average recall of 0.9118 tested over ten congestion events.},
+  category  = {selectiveconference},
+  keywords  = {reliability, transit},
 }
