--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -171,6 +171,20 @@ between energy use and factors such as road and weather conditions."
   category  = {selectiveconference},
   keywords  = {reliability, transit},
 }
+
+
+@inproceedings{pettetisgt2020,
+  title={A Decision Support Framework for Grid-Aware Electric Bus Charge Scheduling
+},
+  author={Geoffrey Pettet and Malini Ghosal and Shant Mahserejianand Sarah Davisand Siddharth Sridhar and Abhishek Dubey and Michael Kintner-Meyer
+},
+  booktitle={2020 IEEE Power \& Energy Society Innovative Smart Grid Technologies Conference (ISGT)},
+    year={2020},
+    abstract={While there are many advantages to electric public transit vehicles, they also pose new challenges for fleet operators. One key challenge is defining a charge scheduling policy that minimizes operating costs and power grid disruptions while maintaining schedule adherence. An uncoordinated policy could result in buses running out of charge before completing their trip, while a grid agnostic policy might incur higher energy costs or cause an adverse impact on the grid’s distribution system. We present a grid aware decision-theoretic framework for electric bus charge scheduling that accounts for energy price and grid load. The framework co-simulates models for traffic (Simulation of Urban Mobility) and the electric grid (GridLAB-D), which are used by a decision-theoretic planner to evaluate charging decisions with regard to their long-term effect on grid reliability and cost. We evaluated the framework on a simulation of Richland, WA’s bus and grid network, and found that it could save over $100k per year on operating costs for the city compared to greedy methods.},
+  organization={IEEE}
+}
+
+
 @Article{aymantoit2020,
   author   = {Afiya Ayman and Amutheezan Sivagnanam and Michael Wilbur and Philip Pugliese and Abhishek Dubey and Aron Laszka},
   title    = {Data-Driven Prediction and Optimization of Energy Use for Transit Fleets of Electric and ICE Vehicles},
