--- a/_bibliography/refs.bib
+++ b/_bibliography/refs.bib
@@ -176,7 +176,7 @@ between energy use and factors such as road and weather conditions."
 @inproceedings{pettetisgt2020,
   title={A Decision Support Framework for Grid-Aware Electric Bus Charge Scheduling
 },
-  author={Geoffrey Pettet and Malini Ghosal and Shant Mahserejianand Sarah Davisand Siddharth Sridhar and Abhishek Dubey and Michael Kintner-Meyer
+  author={Geoffrey Pettet and Malini Ghosal and Shant Mahserejian and Sarah Davis and Siddharth Sridhar and Abhishek Dubey and Michael Meyer
 },
   booktitle={2020 IEEE Power \& Energy Society Innovative Smart Grid Technologies Conference (ISGT)},
     year={2020},
