updated the links to pick the models from the correct location

--- a/files/notebooks/Macro_Prediction_Models/Prediction_Script_Diesel.ipynb
+++ b/files/notebooks/Macro_Prediction_Models/Prediction_Script_Diesel.ipynb
@@ -33,15 +33,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/hdemma/hdemma.github.io/blob/master/Macro_Prediction_Models/Prediction_Script_Diesel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/smarttransit-ai/smarttransit-ai.github.io/blob/master/files/notebooks/Macro_Prediction_Models/Prediction_Script_Diesel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9bIOaoPEm2cj",
-        "colab_type": "code",
-        "colab": {}
+        "id": "9bIOaoPEm2cj"
       },
       "source": [
         "#global parameters\n",
@@ -49,15 +47,14 @@
         "#we are not training\n",
         "Train = False"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
         "collapsed": true,
-        "id": "CrboWmZEIJgV",
-        "colab_type": "text"
+        "id": "CrboWmZEIJgV"
       },
       "source": [
         "# Libraries"
@@ -66,13 +63,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KwyJbtuvIJgW",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "157343fe-d42a-4b29-ea48-e48c97f79840"
+        "id": "KwyJbtuvIJgW"
       },
       "source": [
         "import pandas as pd\n",
@@ -95,43 +86,32 @@
         "from keras.callbacks import ModelCheckpoint\n"
       ],
       "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zsFd9yE2m9zD",
-        "colab_type": "code",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "05bd3f6c-597f-442f-d695-27a6501c6168"
+        "outputId": "1dd1ba9e-bc1e-4005-aac8-7bafe96a711f"
       },
       "source": [
         "#obtain the repository\n",
-        "!git clone https://github.com/hdemma/hdemma.github.io.git"
+        "!git clone https://github.com/smarttransit-ai/smarttransit-ai.github.io.git"
       ],
       "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'hdemma.github.io'...\n",
-            "remote: Enumerating objects: 185, done.\u001b[K\n",
-            "remote: Counting objects: 100% (185/185), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (177/177), done.\u001b[K\n",
-            "remote: Total 388 (delta 91), reused 3 (delta 1), pack-reused 203\u001b[K\n",
-            "Receiving objects: 100% (388/388), 67.06 MiB | 12.95 MiB/s, done.\n",
-            "Resolving deltas: 100% (144/144), done.\n"
+            "Cloning into 'smarttransit-ai.github.io'...\n",
+            "remote: Enumerating objects: 1273, done.\u001b[K\n",
+            "remote: Total 1273 (delta 0), reused 0 (delta 0), pack-reused 1273\u001b[K\n",
+            "Receiving objects: 100% (1273/1273), 403.42 MiB | 19.66 MiB/s, done.\n",
+            "Resolving deltas: 100% (481/481), done.\n",
+            "Checking out files: 100% (631/631), done.\n"
           ],
           "name": "stdout"
         }
@@ -140,8 +120,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JuXFGXEXdem5",
-        "colab_type": "text"
+        "id": "JuXFGXEXdem5"
       },
       "source": [
         "Google Authentication"
@@ -150,8 +129,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WUGRr8ecddNM",
-        "colab_type": "text"
+        "id": "WUGRr8ecddNM"
       },
       "source": [
         ""
@@ -160,8 +138,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "j67SDXwvIJgZ",
-        "colab_type": "text"
+        "id": "j67SDXwvIJgZ"
       },
       "source": [
         "# Load Data Set"
@@ -171,19 +148,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "fP3QeOCdIJga",
-        "colab_type": "code",
-        "outputId": "b08ea7cd-339c-40b8-b0cb-4892167e7810",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "937fa577-d86e-4bce-9f4e-aba666ca92df"
       },
       "source": [
-        "url = f'file:///content/hdemma.github.io/Dataset/{Vehicle_Type}/{Vehicle_Type}_Final_Training_Samples.csv'\n",
+        "url = f'file:///content/smarttransit-ai.github.io/files/dataset/{Vehicle_Type}/{Vehicle_Type}_Final_Training_Samples.csv'\n",
         "df = pd.read_csv(url)\n",
         "print(len(df))"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,8 +172,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2ZFNM8_HIJgc",
-        "colab_type": "text"
+        "id": "2ZFNM8_HIJgc"
       },
       "source": [
         "# Processsing Inputs and Labels"
@@ -208,12 +182,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AINsCvluIJgd",
-        "colab_type": "code",
-        "outputId": "d1e1a4a6-3f75-4e69-dd6a-4fd11f6a7732",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ce5eec3-7dd7-48da-b6db-8195b98df6a3"
       },
       "source": [
         "df = df.values.tolist()\n",
@@ -248,7 +220,7 @@
         "\n",
         "print('*******************************')"
       ],
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,8 +239,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "reONugrfIJgf",
-        "colab_type": "text"
+        "id": "reONugrfIJgf"
       },
       "source": [
         "# Random Train-Test Split"
@@ -278,12 +249,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SitBP7uQIJgf",
-        "colab_type": "code",
-        "outputId": "a566e830-6a89-41ca-f5f9-7042382f3219",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77110768-60d7-43ea-f075-aeed72a256d4"
       },
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
@@ -294,7 +263,7 @@
         "print(f'Testing_inputs = {np.shape(X_test)}')\n",
         "print(f'Testing_Labels = {np.shape(y_test)}')"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,8 +280,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "C0jltPRiIJgi",
-        "colab_type": "text"
+        "id": "C0jltPRiIJgi"
       },
       "source": [
         "# Removing Time_Needed Feature"
@@ -322,12 +290,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ugXuGNIZIJgi",
-        "colab_type": "code",
-        "outputId": "7a93c5df-7b3a-49ad-fb79-d98636370736",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        }
+        },
+        "outputId": "7a93c5df-7b3a-49ad-fb79-d98636370736"
       },
       "source": [
         "# Saving Time Needed for predicting for samples with longer intervals\n",
@@ -352,7 +319,7 @@
         "\n",
         "Length_of_TestData = T[0]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,8 +336,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "izVGpseKIJgk",
-        "colab_type": "text"
+        "id": "izVGpseKIJgk"
       },
       "source": [
         "# ANN Model - Feed Forward"
@@ -379,9 +345,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_EVLzgokIJgl",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_EVLzgokIJgl"
       },
       "source": [
         "def SimpleFeedForward_Model():\n",
@@ -469,14 +433,13 @@
         "\n",
         "    return y_pred"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZQ1tACtyIJgn",
-        "colab_type": "text"
+        "id": "ZQ1tACtyIJgn"
       },
       "source": [
         "# Decision Tree Model"
@@ -485,9 +448,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zrGT244cIJgo",
-        "colab_type": "code",
-        "colab": {}
+        "id": "zrGT244cIJgo"
       },
       "source": [
         "def DecisionTree_Model():\n",
@@ -537,14 +498,13 @@
         "\n",
         "    return y_pred"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qtF5TCDbIJgq",
-        "colab_type": "text"
+        "id": "qtF5TCDbIJgq"
       },
       "source": [
         "# Linear Regression Model"
@@ -553,9 +513,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Jndt7n3IJgq",
-        "colab_type": "code",
-        "colab": {}
+        "id": "4Jndt7n3IJgq"
       },
       "source": [
         "def LinearRegression_Model():\n",
@@ -609,14 +567,13 @@
         "\n",
         "    return y_pred"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GQvoQAUWIJgt",
-        "colab_type": "text"
+        "id": "GQvoQAUWIJgt"
       },
       "source": [
         "# Plotting Predicted vs Actual"
@@ -625,9 +582,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GlkxXFeuIJgt",
-        "colab_type": "code",
-        "colab": {}
+        "id": "GlkxXFeuIJgt"
       },
       "source": [
         "def Plotting_Pred_Actual(Model_Name,Actual_Values,PredictedValues,Length_of_TestData,Count,plotlength=25):\n",
@@ -664,14 +619,13 @@
         "        if final>Count:\n",
         "            break"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4VraCzMxIJgv",
-        "colab_type": "text"
+        "id": "4VraCzMxIJgv"
       },
       "source": [
         "# Saving Results in files"
@@ -680,9 +634,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JJ7IGPVpIJgw",
-        "colab_type": "code",
-        "colab": {}
+        "id": "JJ7IGPVpIJgw"
       },
       "source": [
         "def Save_Results_to_Files(Model_Name,Actual_Values,PredictedValues,Time_needed):\n",
@@ -709,14 +661,13 @@
         "    Predicted_Fuel_Consumption.to_csv(f'{CSV_Name_Loss}',index=False)\n",
         "    print('\\n\\n***********Results Saved************\\n')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QBowdSeRIJg0",
-        "colab_type": "text"
+        "id": "QBowdSeRIJg0"
       },
       "source": [
         "# Prediction"
@@ -726,7 +677,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "LPfV_-G3nnGO",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 497
@@ -747,7 +697,7 @@
         "Plotting_Pred_Actual(Model_Name,Actual_Values,PredictedValues,Length_of_TestData,Count,75)\n",
         "Save_Results_to_Files(Model_Name,Actual_Values,PredictedValues,Time_needed)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +733,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "uzazd7zjnoQn",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 517
@@ -799,7 +748,7 @@
         "Plotting_Pred_Actual(Model_Name,Actual_Values,PredictedValues,Length_of_TestData,Count,75)\n",
         "Save_Results_to_Files(Model_Name,Actual_Values,PredictedValues,Time_needed)"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,7 +790,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "r-HOw6wirnsh",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 517
@@ -857,7 +805,7 @@
         "Plotting_Pred_Actual(Model_Name,Actual_Values,PredictedValues,Length_of_TestData,Count,75)\n",
         "Save_Results_to_Files(Model_Name,Actual_Values,PredictedValues,Time_needed)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,8 +852,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5XmXZA9nnQFi",
-        "colab_type": "text"
+        "id": "5XmXZA9nnQFi"
       },
       "source": [
         "# MSE Plot"
@@ -915,12 +862,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "uosFbhy2nSN5",
-        "colab_type": "code",
-        "outputId": "c15c4300-8f85-442f-e168-6700027725ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 672
-        }
+        },
+        "outputId": "c15c4300-8f85-442f-e168-6700027725ed"
       },
       "source": [
         "Vehicle_Type = 'Diesel_Vehicles'\n",
@@ -975,7 +921,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
