--- a/files/notebooks/Micro_Prediction_Models/microDiesel.ipynb
+++ b/files/notebooks/Micro_Prediction_Models/microDiesel.ipynb
@@ -56,7 +56,7 @@
    ],
    "source": [
     "#read data\n",
-    "df = pd.read_csv('C:/Users/15304/Downloads/Gillig145Feb2020W2.csv', index_col=False)\n",
+    "df = pd.read_csv('Gillig145Feb2020W2.csv', index_col=False)\n",
     "print(len(df))\n",
     "df.columns"
    ]
@@ -182,7 +182,7 @@
    "outputs": [],
    "source": [
     "#read trajectory data that needs prediction\n",
-    "trip = pd.read_csv(\"E:/SUMO/RUIXIAO/newChattanooganet/Data/output/Traj6-7/Route10G_trip152322020_060000.csv\")\n",
+    "trip = pd.read_csv(\"Route10G_trip152322020_060000.csv\")\n",
     "trip['speed']=trip['speed']*(0.01*3.6) \n",
     "#km/h\n",
     "trip['acceleration']=trip['acceleration']*(0.001) \n",
