--- a/files/notebooks/Micro_Prediction_Models/microElectric.ipynb
+++ b/files/notebooks/Micro_Prediction_Models/microElectric.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "#read history data used to train model\n",
-    "dataset = pd.read_excel('E:/SUMO/RUIXIAO/newChattanooganet/Data/output/Porcessed_BYD751_dataset.xlsm', index_col=False)\n",
+    "dataset = pd.read_excel('Porcessed_BYD751_dataset.xlsm', index_col=False)\n",
     "print(dataset.head(5))\n",
     "dataset['Speed2'] = dataset['Speed'].pow(2)\n",
     "dataset['Speed3'] = dataset['Speed'].pow(3)\n",
@@ -256,7 +256,7 @@
    ],
    "source": [
     "#read trajectory data that needs prediction\n",
-    "trip = pd.read_csv(\"E:/SUMO/RUIXIAO/newChattanooganet/Data/output/Traj6-7/Route1_trip151720020_061000.csv\")\n",
+    "trip = pd.read_csv(\"Route1_trip151720020_061000.csv\")\n",
     "trip1=trip[['speed','acceleration']]\n",
     "input4pre=pd.DataFrame()  \n",
     "input4pre['Acc']=trip1['acceleration']*(0.001)*3.28\n",
