--- a/files/notebooks/Micro_Prediction_Models/EBusModel/Micro_EBUS_model.ipynb
+++ b/files/notebooks/Micro_Prediction_Models/EBusModel/Micro_EBUS_model.ipynb
@@ -184,8 +184,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Load and pre-process data\n",
-        "## Combine two datasets: one dataset from spring, when temperature is lower, one from summer, when temperature is higher"
+        "# Load and pre-process data\n"
       ]
     },
     {
