--- a/files/notebooks/Micro_Prediction_Models/microDieselMY1998.ipynb
+++ b/files/notebooks/Micro_Prediction_Models/microDieselMY1998.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "#predict all trips in a for loop\n",
-    "path = r'./Data'                    \n",
+    "path = r'path/'                    \n",
     "all_files = glob.glob(os.path.join(path, \"Trajectory*.csv\")) \n",
     "colnames=['time_ms','speed','acceleration','vehicle_ref','actorConfig_id','actorConfig_emissionClass','actorConfig_fuel','actorConfig_ref','actorConfig_vehicleClass']\n",
     "for f in all_files:\n",
@@ -196,7 +196,7 @@
    "outputs": [],
    "source": [
     "#read trajectory data that needs prediction\n",
-    "trip = pd.read_csv(\"./Data/Route1_trip151687020_065500.csv\")\n",
+    "trip = pd.read_csv(\"./Route1_trip151687020_065500.csv\")\n",
     "trip['speed']=trip['speed']*(0.01*3.6) \n",
     "#km/h\n",
     "trip['acceleration']=trip['acceleration']*(0.001) \n",
